Sincronizar cambios en index.html y styles.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Juego de Grilla</h1>
+        <h1>CAMINO DE GORILAS</h1>
         <p class="instructions">Usa las flechas del teclado ← → o los botones para mover el sprite</p>
         <div class="grid-container">
             <div class="grid" id="gameGrid"></div>
@@ -32,7 +32,7 @@
             <h2 class="modal-title">¡Felicitaciones!</h2>
             <p class="modal-message">Has llegado al final de la grilla</p>
             <div class="modal-buttons">
-                <button class="modal-btn btn-primary" id="btnNewGame">De Nuevo</button>
+                <button class="modal-btn btn-primary" id="btnNewGame">Inicio</button>
                 <button class="modal-btn btn-secondary" id="btnExit">Salir</button>
             </div>
         </div>
